--- a/demo/demo_page.html
+++ b/demo/demo_page.html
@@ -16,9 +16,19 @@
                 <div class="input-group">
                   <input type="text" ng-model="search.title" class="form-control" placeholder="Movie title...">
                   <span class="input-group-btn">
-                    <button class="btn btn-default" type="button" ng-click="doSearch(search.title)">Calculate</button>
+                    <button class="btn btn-default" type="button" ng-click="doSearch(search.title)">Search</button>
                   </span>
                 </div>
+                <table class="table table-hover">
+                  <tr ng-repeat="result in results" ng-click="doCalc(result)">
+                      <td>
+                          {{result[0]}}
+                      </td>
+                      <td>
+                         {{result[1]}}
+                      </td>
+                  </tr>
+                </table>
             </div>
         </div>
         <hr>
